log daily study

--- a/Contribution/SPARK-23986.md
+++ b/Contribution/SPARK-23986.md
@@ -3,7 +3,7 @@
 fixed in 2.3.1 / 2.4.0 https://github.com/apache/spark/pull/21080
 
 ```
-org.apache.spark.sql.execution.CodegenSupport.constructDoConsumeFunction, spark-generated.java
+org.apache.spark.sql.execution.CodegenSupport.constructDoConsumeFunction
 
 1st call: [agg_expr_1, agg_expr_2, agg_expr_3, agg_expr_4, agg_expr_5, agg_expr_6]
 
